--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -96,7 +96,7 @@ http {
         gzip_comp_level 4;
         gzip_min_length 256;
         gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
-        gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+        gzip_types application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/wasm application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
 
         # Handle Microsoft DAV clients
         location = / {
@@ -160,7 +160,7 @@ http {
             index index.php;
         }
 
-        location ~ \.(?:css|js|woff2?|svg|gif|map)$ {
+        location ~ \.(?:css|js|woff2?|svg|gif|map|wasm|tflite)$ {
             try_files $uri /index.php$request_uri;
             add_header Cache-Control "public, max-age=15778463";
             add_header Strict-Transport-Security "@HSTS_HEADER@";
@@ -172,11 +172,20 @@ http {
             add_header X-Robots-Tag "none" always;
             add_header X-XSS-Protection "1; mode=block" always;
             access_log off;
+
+            location ~ \.wasm$ {
+                default_type application/wasm;
+            }
         }
 
         location ~ \.(?:png|html|ttf|ico|jpg|jpeg|bcmap|mp4|webm)$ {
             try_files $uri /index.php$uri$is_args$args;
             access_log off;
+        }
+
+        # Rule borrowed from `.htaccess`
+        location /remote {
+            return 301  @SUBDIR@/remote.php$request_uri;
         }
     }
 }
