Attempted fix for https://github.com/nextcloud/photos/issues/1452

--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -187,5 +187,12 @@ http {
         location /remote {
             return 301  @SUBDIR@/remote.php$request_uri;
         }
+
+	location ~ ^/apps/files_sharing/publicpreview/null {
+            if ($args ~ "^file=/photospublic/([a-zA-Z0-9]*)/([0-9]*).*$") {
+                set $w1 $1;
+                rewrite .* /apps/photos/api/v1/publicPreview/$arg_fileId?x=1080&y=1080&token=$w1? redirect;
+            }
+	}
     }
 }
