Fix redirect to incorrect port for fixing https://github.com/nextcloud/photos/issues/1452

--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -189,6 +189,7 @@ http {
         }
 
 	location ~ ^/apps/files_sharing/publicpreview/null {
+            absolute_redirect off;
             if ($args ~ "^file=/photospublic/([a-zA-Z0-9]*)/([0-9]*).*$") {
                 set $w1 $1;
                 rewrite .* /apps/photos/api/v1/publicPreview/$arg_fileId?x=1080&y=1080&token=$w1? redirect;
