--- a/Dockerfile-25
+++ b/Dockerfile-25
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-ARG NEXTCLOUD_VERSION=25.0.1
+ARG NEXTCLOUD_VERSION=25.0.3
 ARG ALPINE_VERSION=3.16
 ARG SMBCLIENT_VERSION=1.0.6
 
@@ -26,6 +26,7 @@ RUN apk --update --no-cache add \
     ca-certificates \
     curl \
     ffmpeg \
+    exiftool \
     imagemagick \
     gcompat \
     ghostscript \
